--- a/src/components/punkList.css
+++ b/src/components/punkList.css
@@ -3,6 +3,7 @@
     display: flex;
     overflow: scroll;
     padding-bottom: 20px;
+    padding-top: 20px;
     border-bottom: 1px solid white;
 }
 
